--- a/src/App.module.css
+++ b/src/App.module.css
@@ -9,6 +9,7 @@
     justify-content: space-between;
     overflow: auto;
     -webkit-user-select: none;
+    -webkit-touch-callout: none;
 }
 
 .map {
